# FlowEHR-Data-Pot

./: .gitignore  .pre-commit-config.yaml  README.md  run_mypy.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pr_checks.yml
hello-world/: MANIFEST.in  Makefile  activities.json  entrypoint.py  pipeline.json  pyproject.toml
hello-world/src/: app_logging.py  constants.py  db.py  monitoring.py  transform.py
hello-world/src/helloworld/: constants.py  db.py  entrypoint.py
hello-world/src/helloworld/tests/: test_example.py
hello-world/tests/: test_example.py
hello-world/tests/helpers/: pyspark_test.py
helloworld/: Makefile  pipeline.json  pyproject.toml
helloworld/src/helloworld/: constants.py  db.py  entrypoint.py  monitoring.py
helloworld/src/helloworld/tests/: conftest.py  test_example.py  test_transform.py
