[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.0.1"
dependencies = []

[project.optional-dependencies]
test = [
    "pyspark == 3.3.1",
]
build = [
    "build == 0.10.0"
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true
